# browser-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: agent.rs  browser.rs  interpreter.rs  lib.rs  main.rs  openai.rs
