[package]
name = "browser-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.3.1"
indoc = "2.0.1"
anyhow = "1.0.70"
tracing = "0.1.37"
async-openai = "0.10.0"
tokio-stream = "0.1.12"
tokio = { version = "1.26.0", features = ["full"] }
clap = { version = "4.1.11", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chromiumoxide = { version = "0.5.0", default-features = false, features = ["tokio-runtime", "_fetcher-native-tokio"] }
