[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "browser-agent"
description = "A browser AI agent, using GPT-4."
repository = "https://github.com/m1guelpf/browser-agent"
keywords = ["gpt-4", "openai", "ai", "browser", "agent"]
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
url = "2.3.1"
indoc = "2.0.1"
anyhow = "1.0.70"
tracing = "0.1.37"
async-openai = "0.10.0"
tokio-stream = "0.1.12"
tokio = { version = "1.26.0", features = ["full"] }
clap = { version = "4.1.11", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chromiumoxide = { version = "0.5.0", default-features = false, features = ["tokio-runtime", "_fetcher-native-tokio"] }
dotenv = "0.15.0"
